# lpmresonance

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  TESTING.md  example_doctest.sage  latexmkrc  mkdocs.yml  pyproject.toml  pyrightconfig.json  setup.cfg
.github/workflows/: docs.yml  test.yml
ci/github/workflows/: ci.yml
ci/latexmk/: latexmkrc.ci
docs/: changelog.md  faq.md  index.md
docs/api/: python.md  stability.md  tex-macro-reference.md
docs/assets/: README.md
docs/developer-guide/: architecture.md  caching.md  contributing.md  emitter-contracts.md  geometry-invariants.md  manifest-schema.md  upgrade-notes.md
docs/user-guide/: gallery.md  installation.md  lattice-path-macros.md  options-and-keys.md  quickstart.md  schubert-macros.md  shading-between-paths.md  troubleshooting.md
examples/: README-EXAMPLES.md  example-gallery.tex  example-gallery.tex.very-corrupted  example.tex  fix-shadeBits.py  latexmkrc  test-features.tex  test-inside-corners.tex  test-multiple-corners.tex  test-selective-corners.tex
python/lpm_paths/: __init__.py  api.py  between.py  cache.py  doctor.py  errors.py  geometry.py  hashing.py  manifest.py  sanitize.py  types.py  version.py
python/lpm_paths/emitters/: tex.py
scripts/: build-docs.sh  check-tex.sh  clean-cache.sh  install-from-github.sh  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  regen-goldens.py  run-python-tests.sh
tests/python/: conftest.py  test_api.py  test_between.py  test_cache.py  test_emitters_tex.py  test_geometry.py  test_hashing.py
tests/tex/: minimal-doc.tex  test-lpmresonance.tex
tex/doc/lpmresonance/: latexmkrc  lpmresonance-doc.tex
tex/latex/lpmres/: lpmres-base.code.tex  lpmres-between.code.tex  lpmres-draw.code.tex  lpmres-grid.code.tex  lpmres-lpath.code.tex  lpmres-pic.code.tex  lpmres-python.code.tex  lpmresonance.sty
