[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lpmresonance"
version = "0.0.1"
description = "PythonTeX-backed lattice paths in TikZ"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name="Prajwal", email="pudanshi@uwo.ca" }]
dependencies = []

[project.scripts]
lpmresonance-doctor = "lpm_paths.doctor:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["lpm_paths", "lpm_paths.emitters"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["python", "tests"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.9"
typeCheckingMode = "basic"